Added POST methods to link child or spouse to an individual
